--- a/cart/directives/smallCart/smallCart.template.html
+++ b/cart/directives/smallCart/smallCart.template.html
@@ -13,7 +13,7 @@
             
             <div class="row">
                 <div class="col-xs-2">
-                    <img ng-src={{"/product/directive/images/"+item.image}} >
+                    <img ng-src={{"/product/directive/images/"+item.image}} class="rounded float-left img-fluid">
                 </div>
                 <div class="col-xs-10">
                     <h5>NAME:{{item.name}}</h5>
