--- a/cart/cart.template.html
+++ b/cart/cart.template.html
@@ -8,6 +8,6 @@
         </div>
         <h2>TOTAL AMOUNT : {{totalAmount}}</h2>
 
-        <a class="btn btn-secondary btn-block" ng-href="#user">CHECKOUT @  {{totalAmount}} RS</a>
+        <a class="btn btn-secondary btn-block" ng-click="onCheckOut()">CHECKOUT @  {{totalAmount}} RS</a>
     </div>
 </div>
