--- a/app/app.template.html
+++ b/app/app.template.html
@@ -8,8 +8,8 @@
                 <li class="nav-item">
                         <small-cart></small-cart>
                 </li>
-                <li class="nav-item">GUEST</li>
-                <li class="nav-item">PREMIUM</li>
+                <li class="nav-item" ><a class="btn" ng-click="userDetails()">{{userName}}</a></li>
+                <li class="nav-item"><a class="btn btn-round btn-secondary" ng-show="showMode" ng-click="Logout()">Logout</a><a class="btn btn-round btn-secondary" ng-show="!showMode" ng-click="Login()">Login/SignUp</a></li>
                 
         </ul>
 </nav>
