--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="app/app.design.css">
+    <link rel="stylesheet" href="app/appjs/angular-storage.js">
     <link rel="stylesheet" href="cart/directives/smallCart/smallCart.design.css">
 </head>
 
@@ -25,6 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-cookies.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
@@ -41,7 +43,11 @@
     <script src="cart/directives/cartView/cartView.directive.js"></script>
     <script src="cart/directives/cartView/cartView.controller.js"></script>
     <script src="user/user.module.js"></script>
+    <script src="user/user.service.js"></script>
+    <script src="user/user.authentication.js"></script>
     <script src="user/user.component.js"></script>
+    <script src="user/directives/userDetail.directive.js"></script>
+    <script src="user/directives/userDetail.controller.js"></script>
 
 </body>
 
