--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     <script src="user/user.component.js"></script>
     <script src="user/directives/userDetail.directive.js"></script>
     <script src="user/directives/userDetail.controller.js"></script>
+    <script src="payment/payment.module.js"></script>
+    <script src="payment/payment.service.js"></script>
+    <script src="payment/directives/myOrder.directive.js"></script>
+    <script src="payment/directives/myOrder.controller.js"></script>
+    <script src="payment/payment.component.js"></script>
 
 </body>
 
