--- a/user/directives/userDetail.template.html
+++ b/user/directives/userDetail.template.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
                 <p class="col-sm-2">Address</p>
-                <p class="cols-m-10">{{userDetail.Address}}</p>
+                <p class="cols-m-10">{{userDetail.address}}</p>
         </div>
         <button type="submit" class="btn btn-primary" ng-hide="editMode" ng-click="changeMode()">EDIT</button>     
     </div>
@@ -73,8 +73,8 @@
                     </div>
 				  <div class="form-group row">
 				    <div class="col-sm-10">
-				      <button type="submit" class="btn btn-primary" ng-hide="!editMode" ng-click="clickedSubmit(userDetail)">SUBMIT</button>
-				      <button type="submit" class="btn btn-primary" ng-hide="!editMode" ng-click="clickedCancel()">CANCEL</button>
+				      <a type="submit" class="btn btn-primary" ng-hide="!editMode" ng-click="clickedSubmit(userDetail)">SUBMIT</a>
+				      <a type="submit" class="btn btn-primary" ng-hide="!editMode" ng-click="clickedCancel()">CANCEL</a>
 				    </div>
 				  </div>
 				</form>
