--- a/cart/directives/cartView/cartView.template.html
+++ b/cart/directives/cartView/cartView.template.html
@@ -17,7 +17,7 @@
                        
                         <label>Quantity</label>
                         <select ng-init="quantity=0"ng-model="details.quantity" ng-change="updateCart(details.id,details.quantity)">
-                                <option value="1" active>1</option>
+                                <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
                         </select>
