--- a/user/user.template.html
+++ b/user/user.template.html
@@ -77,7 +77,7 @@
 
     <hr />
     <div class="mx-auto" align="center">
-            <a class="btn btn-primary btn-lg btn  " >CONTINUE AS GUEST</a>
+            <a class="btn btn-primary btn-lg btn" ng-click="doGuest()" >CONTINUE AS GUEST</a>
     </div>
     
 </div>
