--- a/payment/payment.template.html
+++ b/payment/payment.template.html
@@ -8,9 +8,58 @@
     </div>
     
 
-    <div  ng-show="mode==1">
+    <div  ng-show="mode==1||mode==4">
+        <div ng-show="mode==1">
         <user-detail></user-detail>
+        </div>
+        <div ng-show="mode==4">
+            <form>
+                <div class="form-group row">
+                        <label for="firstName" class="col-sm-2 col-form-label">FIRST NAME</label>
+                        <div class="col-sm-10">
+                          <input type="text" class="form-control" id="Name" ng-model="userDetail.firstName" >
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                            <label for="lastName" class="col-sm-2 col-form-label">LAST NAME</label>
+                            <div class="col-sm-10">
+                              <input type="text" class="form-control" id="lastName" ng-model="userDetail.lastName" >
+                            </div>
+                    </div>
+                    <div class="form-group row">
+                            <label for="mobile" class="col-sm-2 col-form-label">MOBILE</label>
+                            <div class="col-sm-10">
+                              <input type="tel" class="form-control" id="mobile" 
+                                    maxlength="10" ng-model="userDetail.mobile" >
+                            </div>        
+                    </div>
+                    <div class="form-group row">
+                            <label for="cardNumber" class="col-sm-2 col-form-label">Card Number</label>
+                            <div class="col-sm-10">
+                              <input type="number" class="form-control" id="cardNumber" 
+                                    maxlength="16" minlength="16" ng-model="userDetail.cardNumber" >
+                            </div>        
+                    </div>
+                    <div class="form-group row">
+                            <label for="expDate" class="col-sm-2 col-form-label">Card Exp Date</label>
+                            <div class="col-sm-10">
+                              <input type="date" class="form-control" id="expDate" 
+                                    ng-model="userDetail.expDate" >
+                            </div>        
+                    </div>
+                    <div class="form-group row">
+                            <label for="address" class="col-sm-2 col-form-label">Address</label>
+                            <div class="col-sm-10">
+                              <input type="text" class="form-control" id="address" ng-model="userDetail.address" >
+                            </div>
+                    </div>
+                </form>
+
+         </div>   
+        
         <a  class="btn btn-derfault" ng-click="changeMode(2)"><h5>NEXT</h5></a>
+
+
     </div>
     <div   ng-show="mode==2"  >
         <div ng-repeat="item in getUserCart">
