--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="app/app.service.js"></script>
     <script src="app/app.component.js"></script>
     <script src="product/product.module.js"></script>
+    <script src="product/product.filter.js"></script>
     <script src="product/directive/productCard.controller.js"></script>
     <script src="product/directive/productCard.directive.js"></script>
     <script src="product/product.component.js"></script>
