--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
+    
     <script src="app/app.service.js"></script>
+    <script src="app/app.run.js"></script>
     <script src="app/app.component.js"></script>
     <script src="product/product.module.js"></script>
     <script src="product/product.filter.js"></script>
