--- a/payment/payment.template.html
+++ b/payment/payment.template.html
@@ -1,62 +1,82 @@
 <div class="container">
 
    
-    <div class="btn-group"  >
-            <a  class="btn btn-default" ng-click="changeMode(4)"><h5>User Information</h5></a>
-            <a  class="btn btn-derfault" ng-click="changeMode(2)"><h5>Cart Infformation</h5></a>
-            <a  class="btn btn-drfault" ng-click="changeMode(3)"><h5>Final Payment</h5></a>
+    <div class="btn-group btn-lg btn-block  row"  >
+            <a  class="btn btn-default col-sm-4" ng-class="{ 'btn-primary' : mode<2}"><h5>User Information</h5></a>
+            <a  class="btn btn-default col-sm-4" ng-class="{ 'btn-primary' : mode<3 }" ><h5>Cart Information</h5></a>
+            <a  class="btn btn-default col-sm-4"  ng-class="{ 'btn-primary' : mode<4 }"><h5>Final Payment</h5></a>
     </div>
     
 
-    <div  ng-show="mode==1||mode==4">
+    <div  ng-show="mode==1||mode==0">
         <div ng-show="mode==1">
         <user-detail></user-detail>
-        <a  class="btn btn-derfault" ng-click="changeMode(2)"><h5>NEXT</h5></a>
+        <span class="float-right"><a  class="btn btn-primary pull-right" ng-click="changeMode(2)"><h5>NEXT &#62;</h5></a></span>
         </div>
-        <div ng-show="mode==4">
-            <form>
+        <div ng-show="mode==0">
+
+
+
+
+
+
+
+
+
+
+
+            <form name="form" ng-submit="onSubmit(userDetail)" role="form">
                 <p>Please Complete The Form</p>
-                <div class="form-group row">
-                        <label for="firstName" class="col-sm-2 col-form-label">FIRST NAME</label>
+                <div class="form-group" ng-class="{ 'has-error': form.firstName.$dirty && form.firstName.$error.required }">
+                        <label for="firstName" class="col-sm-2">FIRST NAME</label>
                         <div class="col-sm-10">
-                          <input type="text" class="form-control" id="Name" ng-model="userDetail.firstName" >
+                          <input type="text" name="firstName" id="firstName" class="form-control" ng-model="userDetail.firstName"  required>
+                          <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First name is required</span>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                            <label for="lastName" class="col-sm-2 col-form-label">LAST NAME</label>
-                            <div class="col-sm-10">
-                              <input type="text" class="form-control" id="lastName" ng-model="userDetail.lastName" >
-                            </div>
-                    </div>
-                    <div class="form-group row">
-                            <label for="mobile" class="col-sm-2 col-form-label">MOBILE</label>
-                            <div class="col-sm-10">
-                              <input type="tel" class="form-control" id="mobile" 
-                                    maxlength="10" ng-model="userDetail.mobile" >
-                            </div>        
-                    </div>
-                    <div class="form-group row">
-                            <label for="cardNumber" class="col-sm-2 col-form-label">Card Number</label>
-                            <div class="col-sm-10">
-                              <input type="number" class="form-control" id="cardNumber" 
-                                    maxlength="16" minlength="16" ng-model="userDetail.cardNumber" >
-                            </div>        
-                    </div>
-                    <div class="form-group row">
-                            <label for="expDate" class="col-sm-2 col-form-label">Card Exp Date</label>
-                            <div class="col-sm-10">
-                              <input type="date" class="form-control" id="expDate" 
-                                    ng-model="userDetail.expDate" >
-                            </div>        
-                    </div>
-                    <div class="form-group row">
-                            <label for="address" class="col-sm-2 col-form-label">Address</label>
-                            <div class="col-sm-10">
-                              <input type="text" class="form-control" id="address" ng-model="userDetail.address" >
-                            </div>
-                    </div>
-                    <a type="submit" class="bt btn-primary" ng-click="onSubmit(userDetail)">Submit</a>
+                </div>
+                <div class="form-group" ng-class="{ 'has-error': form.lastName.$dirty && form.lastName.$error.required }">
+                        <label for="lastName" class="col-sm-2">LAST NAME</label>
+                        <div class="col-sm-10">
+                                <input type="text" name="lastName" id="lastName" class="form-control" ng-model="userDetail.lastName"  required>
+                                <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is required</span>
+                        </div>
+                 </div>
+                 <div class="form-group" ng-class="{ 'has-error': form.mobile.$dirty && form.mobile.$error.required }">
+                        <label for="mobile" class="col-sm-2">Mobile</label>
+                        <div class="col-sm-10">
+                                <input type="tel" name="mobile" id="mobile" class="form-control" maxlength="10" ng-model="userDetail.mobile"  required>
+                                <span ng-show="form.mobile.$dirty && form.mobile.$error.required" class="help-block">Mobile is required</span>
+                        </div>
+                 </div> 
+                 <div class="form-group" ng-class="{ 'has-error': form.cardNumber.$dirty && form.cardNumber.$error.required }">
+                        <label for="cardNumber" class="col-sm-2">Card Number</label>
+                        <div class="col-sm-10">
+                                <input type="text" name="cardNumber" id="cardNumber" class="form-control" maxlength="16" ng-model="userDetail.cadrDetails.cardNumber"  required>
+                                <span ng-show="form.cardNumber.$dirty && form.cardNumber.$error.required" class="help-block">Card Number is required</span>
+                        </div>
+                </div> 
+                <div class="form-group" ng-class="{ 'has-error': form.expDate.$dirty && form.expDate.$error.required }">
+                                <label for="expDate" class="col-sm-2">Card Exp Date</label>
+                                <div class="col-sm-10">
+                                        <input type="date" name="expDate" id="expDate" class="form-control"  ng-model="userDetail.cadrDetails.expDate"  required>
+                                        <span ng-show="form.expDate.$dirty && form.expDate.$error.required" class="help-block">Card Exp Date is required</span>
+                                </div>
+                </div>        
+
+                <div class="form-group" ng-class="{ 'has-error': form.address.$dirty && form.address.$error.required }">
+                                <label for="address" class="col-sm-2">Address</label>
+                                <div class="col-sm-10">
+                                        <input type="text" name="address" id="address" class="form-control"  ng-model="userDetail.address"  required>
+                                        <span ng-show="form.address.$dirty && form.address.$error.required" class="help-block">Address is required</span>
+                                </div>
+                </div>
+                <div class="form-actions">
+                                <button type="submit" ng-disabled="form.$invalid" class="btn btn-lg btn-primary">Submit</button>
+                </div>
+
                 </form>
+
+
 
          </div>   
 
@@ -67,9 +87,11 @@
                 
         </div>
             <h2>TOTAL AMOUNT : {{totalAmount}}</h2>
-            <a  class="btn btn-derfault" ng-click="changeMode(3)"><h5>NEXT</h5></a>
+            <a  class="btn btn-primary" ng-click="changeMode(-1)"><h5>&#60; Back</h5></a>
+            <span class="float-right"><a  class="btn btn-primary pull-right" ng-click="changeMode(3)"><h5>NEXT &#62;</h5></a></span>
     </div>
-    <div   ng-show="mode==3" >
+    <div   ng-show="mode==3" >    
         <a class ="btn btn-primary" ng-click="placeOrder()">PLACE ORDER</a>
+        <a  class="btn btn-primary" ng-click="changeMode(2)"><h5>&#60; Back</h5></a>
     </div>
 </div>      
