--- a/cart/directives/smallCart/smallCart.template.html
+++ b/cart/directives/smallCart/smallCart.template.html
@@ -1,7 +1,7 @@
 <div class="dropdown">
         <a id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-click="$rootScope.updateCart()">
             <i class="fa fa-shopping-cart fa-2x" aria-hidden="true">
-                <span class="badge badge-notify badge-pill badge-dark" >{{Cart.length}}</span>
+                <span class="badge badge-notify badge-pill badge-dark" >{{totalQuantity}}</span>
             </i>
         </a>
         <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
