--- a/app/app.template.html
+++ b/app/app.template.html
@@ -9,6 +9,7 @@
                         <small-cart></small-cart>
                 </li>
                 <li class="nav-item" ><a class="btn" ng-click="userDetails()">{{userName}}</a></li>
+                <li class="nav-item"><a class="btn btn-success" ng-href="#/myorder">Track Order</a></li>
                 <li class="nav-item"><a class="btn btn-round btn-secondary" ng-show="showMode" ng-click="Logout()">Logout</a><a class="btn btn-round btn-secondary" ng-show="!showMode" ng-click="Login()">Login/SignUp</a></li>
                 
         </ul>
