--- a/user/directives/userDetail.template.html
+++ b/user/directives/userDetail.template.html
@@ -1,5 +1,5 @@
 <span style="display:inline-block; width:20px;"></span>
-	<div  class="containe ">
+	<div  class="container">
     <div class="container" ng-hide="editMode">
         <div class="row">
             <p class="col-sm-2">UserName</p>
