--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body id="page-top" data-spy="scroll">
     <header-component></header-component>
     <div  class="container-fluid">
-            <din ng-view></div>
+            <div ng-view></div>
             <!-- <product-display></product-display>  -->
             <!-- <cart-display></cart-display> -->
     </div>
