Implemented change in modular structure

--- a/cart/directives/smallCart/smallCart.template.html
+++ b/cart/directives/smallCart/smallCart.template.html
@@ -30,7 +30,7 @@
         </div>
         </div>
         <a class="dropdown-item lg-dropdown-option" href="#">Total Amount :{{totalAmount}}</a>
-        <a class="dropdown-item lg-dropdown-option" ng-href="#checkout">CHECKOUT</a>
+        <a class="dropdown-item lg-dropdown-option" ng-href="#checkoutcart">CHECKOUT</a>
         </div>
 </div>
 
