--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-cookies.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-cookies.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
@@ -50,11 +50,11 @@
     <script src="user/user.component.js"></script>
     <script src="user/directives/userDetail.directive.js"></script>
     <script src="user/directives/userDetail.controller.js"></script>
-    <script src="payment/payment.module.js"></script>
-    <script src="payment/payment.service.js"></script>
-    <script src="payment/directives/myOrder.directive.js"></script>
-    <script src="payment/directives/myOrder.controller.js"></script>
-    <script src="payment/payment.component.js"></script>
+    <script src="checkout/checkout.module.js"></script>
+    <script src="checkout/checkout.service.js"></script>
+    <script src="checkout/directives/myOrder.directive.js"></script>
+    <script src="checkout/directives/myOrder.controller.js"></script>
+    <script src="checkout/checkout.component.js"></script>
 
 </body>
 
