Chamge in service structure

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
     
-    <script src="app/app.service.js"></script>
+    <!-- <script src="app/app.service.js"></script> -->
     <script src="app/app.run.js"></script>
     <script src="app/app.component.js"></script>
     <script src="product/product.module.js"></script>
@@ -40,6 +40,7 @@
     <script src="product/directive/productCard.directive.js"></script>
     <script src="product/product.component.js"></script>
     <script src="cart/cart.module.js"></script>
+    <script src="cart/cart.service.js"></script>
     <script src="cart/cart.component.js"></script>
     <script src="cart/directives/smallCart/smallCart.controller.js"></script>
     <script src="cart/directives/smallCart/smallCart.directive.js"></script>
