--- a/checkout/checkout.template.html
+++ b/checkout/checkout.template.html
@@ -41,6 +41,14 @@
                                 <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is required</span>
                         </div>
                  </div>
+                 <div class="form-group" ng-class="{ 'has-error': form.email.$dirty && form.email.$error.required }">
+                        <label for="email" class="col-sm-2">Email</label>
+                        <div class="col-sm-10">
+                                <input type="email" name="email" id="email" class="form-control" ng-model="userDetail.email"  required>
+                                <span ng-show=" form.email.$dirty && form.email.$error.required" class="help-block">Email is required</span>
+                                <span ng-show=" form.email.email.$error.email" class="help-block">Not Valid Email</span>
+                        </div>
+                 </div>
                  <div class="form-group" ng-class="{ 'has-error': form.mobile.$dirty && form.mobile.$error.required }">
                         <label for="mobile" class="col-sm-2">Mobile</label>
                         <div class="col-sm-10">
