--- a/user/directives/userDetail.template.html
+++ b/user/directives/userDetail.template.html
@@ -14,6 +14,10 @@
                 <p class="cols-m-10">{{userDetail.lastName}}</p>
         </div>
         <div class="row">
+                <p class="col-sm-2">Email</p>
+                <p class="cols-m-10">{{userDetail.email}}</p>
+        </div>
+        <div class="row">
                 <p class="col-sm-2">Mobile Number</p>
                 <p class="cols-m-10">{{userDetail.mobile}}</p>
         </div>
@@ -63,6 +67,14 @@
                                                 <div class="col-sm-10">
                                                         <input type="tel" name="mobile" id="mobile" class="form-control" maxlength="10" ng-model="userDetail.mobile"  required>
                                                         <span ng-show="form.mobile.$dirty && form.mobile.$error.required" class="help-block">Mobile is required</span>
+                                                </div>
+                                         </div>
+                                         <div class="form-group" ng-class="{ 'has-error': form.email.$dirty && form.email.$error.required }">
+                                                <label for="email" class="col-sm-2">Email</label>
+                                                <div class="col-sm-10">
+                                                        <input type="email" name="email" id="email" class="form-control" ng-model="userDetail.email"  required>
+                                                        <span ng-show="form.email.$dirty && form.email.$error.required" class="help-block">Email is required</span>
+                                                        <span ng-show=" form.email.$error.email" class="help-block">Not Valid Email</span>
                                                 </div>
                                          </div> 
                                          <div class="form-group" ng-class="{ 'has-error': form.cardNumber.$dirty && form.cardNumber.$error.required }">
