--- a/user/user.template.html
+++ b/user/user.template.html
@@ -54,6 +54,12 @@
                                     <input type="text" name="username" id="username" class="form-control" ng-model="$ctrl.user.username" required />
                                     <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
                             </div>
+                            <div class="form-group" ng-class="{ 'has-error': form.email.$dirty && form.email.$error.required }">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email" class="form-control" ng-model="$ctrl.user.email" required />
+                                <span ng-show="form.email.$dirty && form.email.$error.required" class="help-block">Email is required</span>
+                                <span ng-show=" form.email.$error.email" class="help-block">Not Valid Email</span>
+                        </div>
                             <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
                                     <label for="password">Password</label>
                                     <input type="password" name="password" id="password" class="form-control" ng-model="$ctrl.user.password" required />
