--- a/checkout/checkout.template.html
+++ b/checkout/checkout.template.html
@@ -1,10 +1,10 @@
 <div class="container">
 
    
-    <div class="btn-group btn-lg btn-block  row"  >
-            <a  class="btn btn-default col-sm-4" ng-class="{ 'btn-primary' : mode<2}"><h5>User Information</h5></a>
-            <a  class="btn btn-default col-sm-4" ng-class="{ 'btn-primary' : mode<3 }" ><h5>Payment Information</h5></a>
-            <a  class="btn btn-default col-sm-4"  ng-class="{ 'btn-primary' : mode<4 }"><h5>Review</h5></a>
+    <div class="row"  >
+            <div  class="default-col col-sm-4" ng-class="{ 'changed-col' : mode>=0}"><h5>Shipment Information</h5></div>
+            <div  class="default-col col-sm-4" ng-class="{ 'changed-col' : mode>=2 }" ><h5>Payment Information</h5></div>
+            <div  class="default-col col-sm-4"  ng-class="{ 'changed-col' : mode>=3 }"><h5>Review</h5></div>
     </div>
     
 
@@ -46,7 +46,7 @@
                         <div class="col-sm-10">
                                 <input type="email" name="email" id="email" class="form-control" ng-model="userDetail.email"  required>
                                 <span ng-show=" form.email.$dirty && form.email.$error.required" class="help-block">Email is required</span>
-                                <span ng-show=" form.email.email.$error.email" class="help-block">Not Valid Email</span>
+                                <span ng-show=" form.email.$error.email" class="help-block">Not Valid Email</span>
                         </div>
                  </div>
                  <div class="form-group" ng-class="{ 'has-error': form.mobile.$dirty && form.mobile.$error.required }">
