Placed Order page s Added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="checkout/directives/myOrder.directive.js"></script>
     <script src="checkout/directives/myOrder.controller.js"></script>
     <script src="checkout/checkout.component.js"></script>
+    <script src="checkout/placedOrder.component.js"></script>
 
 </body>
 
