--- a/checkout/placedOrder.template.html
+++ b/checkout/placedOrder.template.html
@@ -9,6 +9,7 @@
             <li>COST:{{cart.cost}}</li>
             <li>Total Amount:{{cart.quantity*cart.cost}}</li>
         </ul>
-        
     </ul>
+    <button class="btn btn-primary" ng-click="goToMyOrder()">CHECK ORDERS</button>
+    <button class="btn btn-primary" ng-click="goToShop()">Go To Shop</button>
 </div>
