--- a/checkout/checkout.template.html
+++ b/checkout/checkout.template.html
@@ -74,10 +74,38 @@
                 <div class="form-group" ng-class="{ 'has-error': form.address.$dirty && form.address.$error.required }">
                                 <label for="address" class="col-sm-2">Address</label>
                                 <div class="col-sm-10">
-                                        <input type="text" name="address" id="address" class="form-control"  ng-model="userDetail.address"  required>
+                                        <input type="text" name="address" id="address" class="form-control"  ng-model="userDetail.address.location"  required>
                                         <span ng-show="form.address.$dirty && form.address.$error.required" class="help-block">Address is required</span>
                                 </div>
                 </div>
+                
+
+
+                <div class="form-group" ng-class="{ 'has-error': form.city.$dirty && form.city.$error.required }">
+                        <label for="city" class="col-sm-2">City :</label>
+                        <div class="col-sm-10">
+                                <input type="text" name="city" id="city" class="form-control"  ng-model="userDetail.address.city"  required>
+                                <span ng-show="form.city.$dirty && form.city.$error.required" class="help-block">City is required</span>
+                        </div>
+                </div>
+
+                <div class="form-group" ng-class="{ 'has-error': form.country.$dirty && form.country.$error.required }">
+                        <label for="country" class="col-sm-2">Country :</label>
+                        <div class="col-sm-10">
+                                <input type="text" name="country" id="country" class="form-control"  ng-model="userDetail.address.country"  required>
+                                <span ng-show="form.country.$dirty && form.country.$error.required" class="help-block">Country is required</span>
+                        </div>
+                </div>
+
+
+                <div class="form-group" ng-class="{ 'has-error': form.zip.$dirty && form.zip.$error.required }">
+                        <label for="zip" class="col-sm-2">ZIP :</label>
+                        <div class="col-sm-10">
+                                <input type="number" name="zip" id="zip" class="form-control"  ng-model="userDetail.address.zip"  required>
+                                <span ng-show="form.zip.$dirty && form.zip.$error.required" class="help-block">ZIP is required</span>
+                        </div>
+                </div>
+                
                 <div class="form-actions">
                                 <button type="submit" ng-disabled="form.$invalid" class="btn btn-lg btn-primary">Submit</button>
                 </div>
@@ -102,7 +130,7 @@
         <div>
                 <label> Name : </label><h5>{{userDetail.firstName+" "+userDetail.lastname }}</h5>
                 <label> Mobile No:  </label><h5>{{userDetail.mobile }}</h5>
-                <label> Address:  </label><h5>{{userDetail.address }}</h5>
+                <label> Address:  </label><h5>{{userDetail.address.location+" \n"+userDetail.address.city+" \n"+userDetail.address.country+" \n"+userDetail.address.zip }}</h5>
         </div>
         <div ng-repeat="item in getUserCart">
                         <cart-view details="item"></cart-view>
