--- a/user/directives/userDetail.template.html
+++ b/user/directives/userDetail.template.html
@@ -23,24 +23,12 @@
         </div>
         <div class="row">
                 <p class="col-sm-2">Address</p>
-                <p class="cols-m-10">{{userDetail.address}}</p>
+                <p class="cols-m-10">{{userDetail.address.location+" \n "+userDetail.address.city+" \n"+userDetail.address.country+" \n"+userDetail.address.zip}}</p>
         </div>
         <button type="submit" class="btn btn-primary" ng-hide="editMode" ng-click="changeMode()">EDIT</button>     
     </div>
     
 	<div class="container " ng-hide="!editMode">
-
-
-
-
-
-
-
-
-
-
-
-
                         <form name="form" ng-submit="clickedSubmit(userDetail)" role="form">
                                         <div class="form-group row">
                                                         <label for="userName" class="col-sm-2 col-form-label">USER NAME</label>
@@ -93,12 +81,38 @@
                                         </div>        
                         
                                         <div class="form-group" ng-class="{ 'has-error': form.address.$dirty && form.address.$error.required }">
-                                                        <label for="address" class="col-sm-2">Address</label>
+                                                        <label for="address" class="col-sm-2">Address :</label>
                                                         <div class="col-sm-10">
-                                                                <input type="text" name="address" id="address" class="form-control"  ng-model="userDetail.address"  required>
+                                                                <input type="text" name="address" id="address" class="form-control"  ng-model="userDetail.address.location"  required>
                                                                 <span ng-show="form.address.$dirty && form.address.$error.required" class="help-block">Address is required</span>
                                                         </div>
                                         </div>
+
+                                        <div class="form-group" ng-class="{ 'has-error': form.city.$dirty && form.city.$error.required }">
+                                                <label for="city" class="col-sm-2">City :</label>
+                                                <div class="col-sm-10">
+                                                        <input type="text" name="city" id="city" class="form-control"  ng-model="userDetail.address.city"  required>
+                                                        <span ng-show="form.city.$dirty && form.city.$error.required" class="help-block">City is required</span>
+                                                </div>
+                                        </div>
+
+                                        <div class="form-group" ng-class="{ 'has-error': form.country.$dirty && form.country.$error.required }">
+                                                <label for="country" class="col-sm-2">Country :</label>
+                                                <div class="col-sm-10">
+                                                        <input type="text" name="country" id="country" class="form-control"  ng-model="userDetail.address.country"  required>
+                                                        <span ng-show="form.country.$dirty && form.country.$error.required" class="help-block">Country is required</span>
+                                                </div>
+                                        </div>
+
+
+                                        <div class="form-group" ng-class="{ 'has-error': form.zip.$dirty && form.zip.$error.required }">
+                                                <label for="zip" class="col-sm-2">ZIP :</label>
+                                                <div class="col-sm-10">
+                                                        <input type="number" name="zip" id="zip" class="form-control"  ng-model="userDetail.address.zip"  required>
+                                                        <span ng-show="form.zip.$dirty && form.zip.$error.required" class="help-block">ZIP is required</span>
+                                                </div>
+                                        </div>
+
                                         <div class="form-actions">
                                                         <button type="submit" ng-disabled="form.$invalid" ng-hide="!editMode" class="btn btn-lg btn-primary">Submit</button>
                                                         <button  class="btn btn-lg btn-primary" ng-hide="!editMode" ng-click="clickedCancel()">CANCEL</button>
